
SUBDIRS = MonoDevelop.DesignerSupport Deployment MonoDevelop.SourceEditor MonoDevelop.Autotools MonoDevelop.Gettext CSharpBinding DebuggerAddIn ILAsmBinding JavaBinding BooBinding NemerleBinding NUnit MonoDeveloperExtensions VersionControl VBNetBinding prj2make-sharp-lib WelcomePage ChangeLogAddIn MonoDevelop.GtkCore AspNetAddIn AspNetEdit MonoDevelop.WebReferences MonoDevelop.RegexToolkit CBinding MonoDevelop.Database
